feat: added new endpoint
